--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,4 +8,4 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.Hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.Hibernate.format_sql=true
-spring.jpa.hibernate-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
