--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=demo
-server.port = 9002mv
+server.port = 9002
 server.forward-headers-strategy=framework 
 spring.datasource.url=jdbc:mysql://localhost:3306/Carbon_pro?createDatabaseIfNotExist=true
 spring.datasource.username=root
